<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_gradient_height"
        android:background="@drawable/gadient_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen24"
            android:layout_marginBottom="0dp"
            android:background="@drawable/wrapper"
            android:orientation="vertical"
            android:elevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_marginEnd="@dimen/dimen16"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.DifferentCornerSize.50Percent"
                    app:srcCompat="@drawable/avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/name" />

                    <TextView
                        style="@style/TextBase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/kelas" />

                    <TextView
                        style="@style/TextBase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/nim" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen16"
                android:layout_marginBottom="@dimen/dimen24"
                android:background="#f2f2f2"
                android:minHeight="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_kelamin" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kelamin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_goldar" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goldar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_ttl" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_alamat" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_makkes" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/makkes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_mikes" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mikes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                        android:text="@string/label_hobi" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_lafav" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lafav" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_filfav" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fifav" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/label_pekerjaan" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pekerjaan" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>